[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/Font/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://asset/Font/aerial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Main_Node2D.gd" type="Script" id=3]
[ext_resource path="res://src/GameMain/BackGround/BackGroundStars.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/Image/GastormTitle.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 256.0
color = Color( 0, 0, 0.0784314, 1 )

[node name="BackGroundStars" parent="." instance=ExtResource( 4 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleNode" type="Node2D" parent="CanvasLayer"]

[node name="Button" type="Button" parent="CanvasLayer/TitleNode"]
margin_left = 78.0
margin_top = 147.0
margin_right = 177.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "[S]tart"
flat = true

[node name="Label" type="Label" parent="CanvasLayer/TitleNode"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 68.0
margin_top = 63.5
margin_right = 188.0
margin_bottom = 94.5
custom_fonts/font = SubResource( 1 )
text = "GaStorm"
align = 1
valign = 1

[node name="GastormTitle" type="Sprite" parent="CanvasLayer/TitleNode"]
position = Vector2( 127, 82 )
texture = ExtResource( 5 )

[node name="Button2" type="Button" parent="CanvasLayer/TitleNode"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 92.0
margin_top = 177.0
margin_right = 161.0
margin_bottom = 203.0
rect_pivot_offset = Vector2( 35, 0 )
custom_fonts/font = SubResource( 3 )
text = "[E]ND"
flat = true

[connection signal="button_down" from="CanvasLayer/TitleNode/Button" to="." method="_on_Button_button_down"]
